--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#8D31E9</color>
     <color name="textcolor">#F6040404</color>
     <color name="newcolor">#BDDDD9</color>
+    <color name="background">#A4D0D3</color>
 </resources>
